force-app/main/default/objects/Consignment_Search_Settings__c/Consignment_Search_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>StarTrack : Consignment Search settings</description>
    <label>StarTrack Consignment Search Settings</label>
</CustomObject>