force-app/main/default/objects/Consignment_Search_Settings__c/fields/Article_Case_field__c.field-meta.xml
<CustomField>
    <fullName>Article_Case_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: capture if this is a Article field or case field.</description>
    <label>Article/Case field</label>
    <type>Checkbox</type>
</CustomField>