force-app/main/default/objects/Consignment_Search_Settings__c/fields/Callout_Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Callout_Search_Type__c</fullName>
    <description>StarTrack - Callout Search Type</description>
    <label>Callout Search Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>