force-app/main/default/objects/Consignment_Search_Settings__c/fields/Date_Literal__c.field-meta.xml
<CustomField>
    <fullName>Date_Literal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Date literal field</description>
    <label>Date Literal</label>
    <type>Checkbox</type>
</CustomField>