force-app/main/default/objects/Consignment_Search_Settings__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Date type field to capture date information</description>
    <label>Date Type</label>
    <type>Checkbox</type>
</CustomField>