force-app/main/default/objects/Consignment_Search_Settings__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Default field to capture which field will be default in the search type picklist on consignment search page.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>