force-app/main/default/objects/Consignment_Search_Settings__c/fields/Exact_Search__c.field-meta.xml
<CustomField>
    <fullName>Exact_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Exact search to capture if use fussy logic or exact match</description>
    <label>Exact Search</label>
    <type>Checkbox</type>
</CustomField>