force-app/main/default/objects/Consignment_Search_Settings__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>StarTrack: Search field API name</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>