force-app/main/default/objects/Consignment_Search_Settings__c/fields/Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Search_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Capture Search type information to identify which picklist field belongs to</description>
    <inlineHelpText>Currently expected values are true for consignment search and false for Date</inlineHelpText>
    <label>Search Type</label>
    <type>Checkbox</type>
</CustomField>