force-app/main/default/objects/Consignment_Search_Settings__c/fields/Show_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Date_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Show date field to capture show/hide date filters information</description>
    <label>Show Date Field</label>
    <type>Checkbox</type>
</CustomField>