force-app/main/default/objects/Consignment_Search_Settings__c/fields/Show_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Show_Date_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Show date range if date range type is custom</description>
    <label>Show Date Range</label>
    <type>Checkbox</type>
</CustomField>