force-app/main/default/objects/Consignment_Search_Settings__c/fields/Show_Suburb_Field__c.field-meta.xml
<CustomField>
    <fullName>Show_Suburb_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack: Show Suburb field to capture information related to show/hide suburb field</description>
    <label>Show Suburb Field</label>
    <type>Checkbox</type>
</CustomField>